# nw

./: CMakeLists.txt  README.md  plan.json  riot.txt
.github/workflows/: static.yml
include/: dx_hook.hpp  memory_scanner.hpp
src/: dx_hook.cpp  main.cpp  memory_scanner.cpp
